# sexpect

./: .gitignore  CMakeLists.txt  Makefile  README.md  client.c  common.c  common.h  main.c  proto.c  proto.h  pty.c  pty.h  server.c
.github/workflows/: cmake.yml
doc/: Makefile  manual.txt  sexpect.1  sexpect.adoc  sexpect.html
examples/: bash.sh  bc.sexp.sh  bc.sh  bc.xsh  multi-spawn.sh  parallel.xsh  pty-run.sh  pty.xsh  python.sh  ssh.sh  ssh.xsh  sum-1-to-100.sh
examples/parallel_jobs/: parallel.sh
examples/parallel_jobs/helper/: 5-odd-rand.sh
tests/: CMakeLists.txt  chdir-after-exec.sh  chdir-after-logfile.sh  chkerr.sh  cloexit.sh  close.sh  common.sh  cstring.sh  eof-before-exit.sh  eof_before_exit.c  expbuf-overflow.sh  expect-eof.sh  expect-nocase.sh  expect-pattern.sh  expect_out.sh  get-expbuf.sh  glob2re.c  interact-re-helper.sh  kill.sh  sleep.c  spawn-discard.sh  spawn-nohup.sh  spawn-nonblock.sh  spawn-nowait.sh  spawn-ttl.sh  spawn-zombie-idle.sh  spawn-zombie-idle_02.sh  still-data-after-exit.sh  still-open-after-exit.sh  still_open_after_exit.c  version.sh
